--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
 asgiref==3.2.3
+certifi==2019.11.28
+chardet==3.0.4
 Django==3.0.3
 djangorestframework==3.11.0
+docker==4.2.0
 gunicorn==20.0.4
+idna==2.8
 mysqlclient==1.4.6
+pypiwin32==223
 pytz==2019.3
+pywin32==227
+requests==2.22.0
+six==1.14.0
 sqlparse==0.3.0
+urllib3==1.25.8
+websocket-client==0.57.0
